# R3L

./: .gitignore  LICENSE  README.md  THIRDPARTY_LICENSES.md  holodeck.py  main.py  pyproject.toml  r3l.py
adapters/: blueprints.py  layouts.py  protocols.py
builder/: app.py  asset_converter.py  prompts.py  render_worker.py
builder/templates/: index.html
cli/: builder.py  flow.py  preflight.py  selectors.py
planners/holodeck_v2/: __init__.py  factory.py  rooms.py  selector.py  walls.py
renderer/: blender_animate.py  blender_render.py  blender_utils.py  cycles_device.py
retrievers/holodeck_v2/: __init__.py  factory.py  retriever.py
scripts/: download_data.py  download_models.py  env.example.sh  run_cases.py  run_perf.py  run_tests.py
solvers/r3l/: __init__.py  activations.py  assets.py  builders.py  cluster.py  compile.py  config.py  config.yaml  constraints.py  generate.py  layout.py  losses.py  optimize.py  physics.py  pipeline.py  render.py  report.py  schedulers.py
solvers/r3l/dsl/: parse_cogmap.py  parse_constraints.py
solvers/r3l/prompts/: .gitignore  prompts.py
solvers/r3l/prompts/templates/: constraints_semantic.j2  constraints_spatial.j2
solvers/r3l/prompts/templates/components/: fix_error.j2  main_semantic.j2  main_spatial.j2  output_example_semantic.j2  sys_semantic.j2  (+2 more)
tests/: __init__.py  lib.py  test_aesthetics_kernel.py  test_alignment.py  test_cogmap_aabb.py  test_compile_equivalence.py  test_cycles_device.py  test_frame_equivalence.py  test_holodeck_v2_object_plan.py  test_hv_kernels.py  test_local_collision_equivalence.py  test_mutual_facing_anchor.py  test_parse_cogmap.py  test_rotated_iou_pytorch.py  test_variable_params.py  test_varopt.py  test_wall_corner_kernels.py  test_write_frames.py  utils.py
tests/cases/: __init__.py  circle.py  directions.py  edges.py  gap.py  position.py  studio.py
tests/fixtures/: bedroom_0.json  bedroom_0.llm_output.py  bedroom_1.json  bedroom_1.llm_output.py  capture_snapshot.py  kitchen_12x9_detailed.json  kitchen_12x9_detailed.llm_output.py  music_room_11x8-1.json  music_room_11x8-1.llm_output.py
utils/: asset.py  console.py  constants.py  data.py  fd.py  files.py  log.py  models.py
utils/holodeck_v2/: constants.py  llm.py  prompts.py  types.py  utils.py
utils/r3l/: geometry.py  llm.py  plot.py  types.py
