[project]
name = "r3l"
version = "1.0.0"
description = "R^3L: Reasoning 3D Layouts from Relative Spatial Relations"
authors = [
  { name = "Yuqi Wang", email = "contact@wangyq.me" },
  { name = "Zhifeng Gu", email = "zhifeng.gu@connect.polyu.hk" },
]
license = "MIT AND Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "torch==2.7.1",
  "torchvision==0.22.1",
  "torchaudio==2.7.1",
  "open-clip-torch>=3.1.0,<4.0.0",
  "sentence-transformers>=5.1.0,<6.0.0",
  "huggingface-hub>=0.30,<1.0",
  "numpy<2.3.3",
  "pillow>=11.3.0,<12.0.0",
  "shapely>=2",
  "matplotlib>=3.10.6,<4.0.0",
  "imageio>=2.31",
  "imageio-ffmpeg>=0.5",
  "colorama>=0.4.6,<0.5.0",
  "openai>=1.107.3,<2.0.0",
  "langchain-core==1.0.5",
  "compress-pickle>=2.1.0,<3.0.0",
  "compress-json>=1.1.1,<2.0.0",
  "objathor>=0.0.7",
  "ai2thor>=5.0.0,<6.0.0",
  "tqdm>=4.67.1,<5.0.0",
  "filelock>=3.19.1,<4.0.0",
  "bpy==4.0.0",
  "langchain-openai>=0.3.33,<0.4.0",
  "mathutils>=3.3.0,<4.0.0",
  "mermaid-py>=0.8.1",
  "html2image>=2.0.7",
  "jinja2>=3.1.6",
  "flask>=3.1.2",
  "pydantic>=2.10,<3",
  "pyyaml>=6",
  "prompt-toolkit>=3.0.52",
]

# uv: indexes
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "blender"
url = "https://download.blender.org/pypi/"
explicit = true

[tool.uv.sources]
# torch/torchvision/torchaudio resolve from the default PyPI index: the vendored
# Rotated_IoU CUDA/C++ extension was removed in favor of a pure-PyTorch
# implementation (utils/third_party/Rotated_IoU/vertex_sort.py), so the
# CUDA-only cu118 index is no longer needed and ships no macOS wheels.
bpy = { index = "blender" }

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
# Type-check only the owned R3L surface (source dirs + entry modules); a green run
# here is trustworthy. .venv / output/ etc. fall outside `include` automatically,
# so no custom `exclude` is needed (pyright's defaults still prune __pycache__).
include = ["solvers", "utils", "scripts", "tests", "cli", "main.py", "r3l.py"]
# Vendored third-party (carries its own LICENSE) — not held to our type bar.
ignore = ["utils/third_party"]
